--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,4 @@
-d/* Variables de colores inspirados en SpaceX - Élite Profesional */
+/* Variables de colores inspirados en SpaceX - Élite Profesional */
 :root {
   --space-black: #0a0a0f;
   --deep-space: #12121d;
